--- a/index.html
+++ b/index.html
@@ -8,25 +8,18 @@
 
 
 
-window.addEventListener('DOMContentLoaded', (event) => {
-    
-    window.watsonAssistantChatOptions = {
+        window.watsonAssistantChatOptions = {
             integrationID: "c32cd26c-f205-4dd5-868b-123f7e8d4710", // The ID of this integration.
             region: "au-syd",
-            openChatByDefault:true ,// The region your integration is hosted in.
+            openChatByDefault:true , // The region your integration is hosted in.
             serviceInstanceID: "4538c875-e5de-4a65-a846-49e9181814a3", // The ID of your service instance.
             onLoad: function(instance) { instance.render(); }
           };
-
+        setTimeout(function(){
           const t=document.createElement('script');
           t.src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
           document.head.appendChild(t);
-    
- 
-});
-
-
-         //   document.getElementById('WACLauncher__Button').click()  
+        });
       </script>
 </head>
 
